--- a/Frontend-Template/candidate.html
+++ b/Frontend-Template/candidate.html
@@ -116,7 +116,9 @@
                         <div class="thumb">
                             <img src="img/candiateds/1.png" alt="">
                         </div>
-                        <a href="#"><h4>Markary Jondon</h4></a>
+                        <a href="#">
+                            <h4>Markary Jondon</h4>
+                        </a>
                         <p>Software Engineer</p>
                     </div>
                 </div>
@@ -125,7 +127,9 @@
                         <div class="thumb">
                             <img src="img/candiateds/2.png" alt="">
                         </div>
-                        <a href="#"><h4>Markary Jondon</h4></a>
+                        <a href="#">
+                            <h4>Markary Jondon</h4>
+                        </a>
                         <p>Software Engineer</p>
                     </div>
                 </div>
@@ -134,7 +138,9 @@
                         <div class="thumb">
                             <img src="img/candiateds/3.png" alt="">
                         </div>
-                        <a href="#"><h4>Markary Jondon</h4></a>
+                        <a href="#">
+                            <h4>Markary Jondon</h4>
+                        </a>
                         <p>Software Engineer</p>
                     </div>
                 </div>
@@ -143,17 +149,21 @@
                         <div class="thumb">
                             <img src="img/candiateds/4.png" alt="">
                         </div>
-                        <a href="#"><h4>Markary Jondon</h4></a>
+                        <a href="#">
+                            <h4>Markary Jondon</h4>
+                        </a>
                         <p>Software Engineer</p>
                     </div>
                 </div>
                 <div class="col-md-6 col-lg-3">
-                    
+
                     <div class="single_candidates text-center">
                         <div class="thumb">
                             <img src="img/candiateds/5.png" alt="">
                         </div>
-                        <a href="#"><h4>Markary Jondon</h4></a>
+                        <a href="#">
+                            <h4>Markary Jondon</h4>
+                        </a>
                         <p>Software Engineer</p>
                     </div>
                 </div>
@@ -162,7 +172,9 @@
                         <div class="thumb">
                             <img src="img/candiateds/6.png" alt="">
                         </div>
-                        <a href="#"><h4>Markary Jondon</h4></a>
+                        <a href="#">
+                            <h4>Markary Jondon</h4>
+                        </a>
                         <p>Software Engineer</p>
                     </div>
                 </div>
@@ -171,7 +183,9 @@
                         <div class="thumb">
                             <img src="img/candiateds/7.png" alt="">
                         </div>
-                        <a href="#"><h4>Markary Jondon</h4></a>
+                        <a href="#">
+                            <h4>Markary Jondon</h4>
+                        </a>
                         <p>Software Engineer</p>
                     </div>
                 </div>
@@ -180,7 +194,9 @@
                         <div class="thumb">
                             <img src="img/candiateds/8.png" alt="">
                         </div>
-                        <a href="#"><h4>Markary Jondon</h4></a>
+                        <a href="#">
+                            <h4>Markary Jondon</h4>
+                        </a>
                         <p>Software Engineer</p>
                     </div>
                 </div>
@@ -189,7 +205,9 @@
                         <div class="thumb">
                             <img src="img/candiateds/9.png" alt="">
                         </div>
-                        <a href="#"><h4>Markary Jondon</h4></a>
+                        <a href="#">
+                            <h4>Markary Jondon</h4>
+                        </a>
                         <p>Software Engineer</p>
                     </div>
                 </div>
@@ -198,7 +216,9 @@
                         <div class="thumb">
                             <img src="img/candiateds/10.png" alt="">
                         </div>
-                        <a href="#"><h4>Markary Jondon</h4></a>
+                        <a href="#">
+                            <h4>Markary Jondon</h4>
+                        </a>
                         <p>Software Engineer</p>
                     </div>
                 </div>
@@ -207,7 +227,9 @@
                         <div class="thumb">
                             <img src="img/candiateds/3.png" alt="">
                         </div>
-                        <a href="#"><h4>Markary Jondon</h4></a>
+                        <a href="#">
+                            <h4>Markary Jondon</h4>
+                        </a>
                         <p>Software Engineer</p>
                     </div>
                 </div>
@@ -216,7 +238,9 @@
                         <div class="thumb">
                             <img src="img/candiateds/4.png" alt="">
                         </div>
-                        <a href="#"><h4>Markary Jondon</h4></a>
+                        <a href="#">
+                            <h4>Markary Jondon</h4>
+                        </a>
                         <p>Software Engineer</p>
                     </div>
                 </div>
@@ -333,8 +357,11 @@
                     <div class="col-xl-12">
                         <p class="copy_right text-center">
                             <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="fa fa-heart-o" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a>
-<!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
+                            Copyright &copy;
+                            <script>document.write(new Date().getFullYear());</script> All rights reserved | This
+                            template is made with <i class="fa fa-heart-o" aria-hidden="true"></i> by <a
+                                href="https://colorlib.com" target="_blank">Colorlib</a>
+                            <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
                         </p>
                     </div>
                 </div>
